force-app/main/default/objects/Product_Specifications__c/Product_Specifications__c.object-meta.xml
<CustomObject>
    <label>Product Specifications</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Specifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>