force-app/main/default/objects/Product_Specifications__c/fields/AFSP__c.field-meta.xml
<CustomField>
    <fullName>AFSP__c</fullName>
    <label>AFSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>