force-app/main/default/objects/Product_Specifications__c/fields/EMEA_ICOS__c.field-meta.xml
<CustomField>
    <fullName>EMEA_ICOS__c</fullName>
    <label>EMEA ICOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>