force-app/main/default/objects/Product_Specifications__c/fields/IGM__c.field-meta.xml
<CustomField>
    <fullName>IGM__c</fullName>
    <label>IGM%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>