force-app/main/default/objects/Product_Specifications__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>SPYDR 2.0</fullName>
            </value>
            <value>
                <fullName>Osram Only Part</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>VYPR</fullName>
            </value>
            <value>
                <fullName>NEW PRODUCT DEV</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>NPI</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>CABLES</fullName>
            </value>
            <value>
                <fullName>Controls</fullName>
            </value>
            <value>
                <fullName>CUST</fullName>
            </value>
            <value>
                <fullName>DIM FLEX</fullName>
            </value>
            <value>
                <fullName>FLEX</fullName>
            </value>
            <value>
                <fullName>GIP</fullName>
            </value>
            <value>
                <fullName>LUMINAIRE</fullName>
            </value>
            <value>
                <fullName>MHW</fullName>
            </value>
            <value>
                <fullName>MULT</fullName>
            </value>
            <value>
                <fullName>OPTICS</fullName>
            </value>
            <value>
                <fullName>POWERSUPLY</fullName>
            </value>
            <value>
                <fullName>PSE</fullName>
            </value>
            <value>
                <fullName>PSE2</fullName>
            </value>
            <value>
                <fullName>PSU</fullName>
            </value>
            <value>
                <fullName>PSU2</fullName>
            </value>
            <value>
                <fullName>RAW MTL</fullName>
            </value>
            <value>
                <fullName>RAY</fullName>
            </value>
            <value>
                <fullName>RAY 1.0</fullName>
            </value>
            <value>
                <fullName>RAZR</fullName>
            </value>
            <value>
                <fullName>RAZR 1.0</fullName>
            </value>
            <value>
                <fullName>RAZR 2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>