force-app/main/default/objects/Product_Specifications__c/fields/SPA_Form__c.field-meta.xml
<CustomField>
    <fullName>SPA_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPA Form</label>
    <referenceTo>SPA_Form__c</referenceTo>
    <relationshipLabel>Product Specifications</relationshipLabel>
    <relationshipName>Product_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>