force-app/main/default/objects/Product_Specifications__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <label>Variable ICOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>