force-app/main/default/objects/Product_Specifications__c/fields/Walk_Away_Price__c.field-meta.xml
<CustomField>
    <fullName>Walk_Away_Price__c</fullName>
    <label>Walk Away Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>