force-app/main/default/objects/Product_Specifications__c/validationRules/PreventUpdateRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUpdateRecord</fullName>
    <active>true</active>
    <description>This validation rule prevent users to edit Product Specifications record.</description>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>You are not allowed to edit this record.</errorMessage>
</ValidationRule>