force-app/main/default/objects/Product_Specifications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X12NC__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>AMEA_ICOS__c</columns>
    <columns>EMEA_ICOS__c</columns>
    <columns>IGM__c</columns>
    <columns>AFSP__c</columns>
    <columns>Variable__c</columns>
    <columns>Margin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>